--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   height: 100vh;
   overflow: hidden;
+  -webkit-app-region: drag;
 }
 
 #loader {
@@ -59,7 +60,7 @@ body {
 }
 
 #sender {
-  height: 30.3vh;
+  height: 32.3vh;
 }
 
 #send, #reci, #weight label, #print-btns label {
@@ -108,14 +109,14 @@ h1.post {
 #pound-field h6 {
   opacity: 0.35;
   position: absolute;
-  top: 423px;
+  top: 448px;
   padding-left: 74px;
 }
 
 #ounce-field h6 {
   opacity: 0.35;
   position: absolute;
-  top: 423px;
+  top: 448px;
   padding-left: 85px;
 }
 
@@ -133,6 +134,6 @@ h1.post {
 
 #scale-img svg {
   position: absolute;
-  top: 417px;
+  top: 442px;
   right: 31px;
 }
