Add opacity property to svg (scale image)

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,12 @@ h1.post {
   position: absolute;
   top: 485px;
   right: 31px;
+  fill-opacity: 1;
 }
+
+/*#scale-img path {
+  opacity: 0.35;
+}*/
 
 /* opacity of textarea placeholder */
 ::-webkit-input-placeholder {
